--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "tydzien5_projek-lista_users",
+  "name": "lista-kontaktow",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "npx nodemon index.js"
+    "start-ts": "ts-node index.ts",
+    "start:dev": "tsnd index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^6.0.1",
+    "@types/express": "^4.17.13",
+    "@types/method-override": "^0.0.32",
+    "@types/uuid": "^8.3.4",
+    "express": "^4.17.3",
+    "express-handlebars": "^6.0.5",
     "method-override": "^3.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8"
   }
 }
