--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "resolutions": {
+    "minimist": "1.2.6"
+  },
   "scripts": {
     "start-ts": "ts-node index.ts",
     "start:dev": "tsnd index.ts"
